# pytorch-projects

./: .gitignore  README.md  pyproject.toml
projeto1/: breast_cancer.ipynb
